# aethra

./: README.md  pyproject.toml
examples/: config.yaml  example_run.ipynb
src/aethra/: __init__.py  achromatic.py  cli.py  config.py  detection.py  io.py  pipeline.py  pspl.py  schema.py  seasons.py  variability.py
src/aethra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_pipeline.py
