[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aethra"
version = "0.1.0"
description = "A configurable pipeline for detecting microlensing events in photometric light curves."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "YOUR NAME", email = "you@example.com" },
]
keywords = [
    "astronomy",
    "microlensing",
    "photometry",
    "light-curves",
    "time-series",
    "exoplanets",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "astropy>=5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Reading Parquet input
parquet = ["pyarrow>=7.0"]
# Development / testing
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/rges-pit/aethra"
Repository = "https://github.com/rges-pit/aethra"
Issues = "https://github.com/rges-pit/aethra/issues"

[project.scripts]
aethra = "aethra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, UP = pyupgrade, B = bugbear
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line length handled by formatter; scientific code has long lines
]

[tool.pytest.ini_options]
testpaths = ["tests"]
